--- a/CSS/main.css
+++ b/CSS/main.css
@@ -28,13 +28,14 @@ body {
     color: #fff;
 }
 .main-header h1{
-    font-size: 3em;
+    font-size: 4em;
     font-family: 'Chewy', sans-serif;
     text-align: center;
     margin-bottom: 0;
 }
 .main-header p {
     font-family: 'Raleway', sans-serif;
+    font-size: 1.25em;
     text-align: center;
     margin-top: 2em;
 }
@@ -57,10 +58,14 @@ body {
   border: none;
   height: 50px;
   background: #aeee00;
-  color: #333;        
+  color: #333; 
+  transition: background 1s ease-in-out;    
 }
 .input-submit:hover{
     cursor: pointer;
+    background: #333;
+    color: #fff;
+    transition: background 1s ease-in-out;
 }
 .btn-find{
   margin: 2em auto;
