--- a/CSS/main.css
+++ b/CSS/main.css
@@ -47,12 +47,14 @@ body {
 
 .find{
     padding: 3em 0;
+    font-family: 'Raleway', sans-serif;
 }
 .input-search{
   margin: auto;    
   position: relative;
   height: 50px;
-  width: 40em;
+  width: 22em;
+  font-size: 1.25em;        
   border: 2px solid #Aeee00;
   background: transparent;
   display: block;    
@@ -81,6 +83,7 @@ input[type=text] {
   -o-transition: all 0.30s ease-in-out;
   outline: none;
   border: 2px solid #aeee00;
+  text-align: center;    
 }
  
 input[type=text]:focus {
@@ -122,11 +125,16 @@ li i.fa-angle-double-right{
   position: absolute;
   z-index: 5;    
 }
-
+.results img {
+    box-shadow: 3px 3px 1px #333;
+}
 img:hover{
     opacity: 0.7;
 }
-
+.results a {
+    text-decoration: none;
+    color: #000;
+}
 .caption h3 {
     font-family: 'Raleway', sans-serif;
     font-size: 2em;
