--- a/CSS/main.css
+++ b/CSS/main.css
@@ -16,7 +16,7 @@ body {
 }
 .main {
     width: 60em;
-    margin: 0 auto;
+    margin: 0 auto 1em;
     
 }
 .main hr {
@@ -26,7 +26,7 @@ body {
 
 /* Header Styles */
 .main-header{
-    padding: 5em 0 2em;
+    padding: 4em 0 2em;
     color: #fff;
 }
 .main-header h1{
@@ -128,8 +128,9 @@ li i.fa-angle-double-right{
 .results img {
     box-shadow: 3px 3px 1px #333;
 }
-img:hover{
+.results img:hover{
     opacity: 0.7;
+    cursor: pointer;
 }
 .results a {
     text-decoration: none;
